<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">伪基站防护</string>
    <string name="hello">欢迎使用本软件！！！</string>
    <string name="wellcom">本软件会帮助您的手机免于伪基站的挟持！</string>
    <string name="notice">服务未启动！</string>
    <string name="button1">启用服务</string>
    <string name="button2">停用服务</string>
    <string name="service">服务程序</string>
    <string name="warning">WARNING!</string>
    <string name="action_settings">Settings</string>
    <string name="warn">您的手机现在被伪基站劫持！</string>
    <string name="button3">确定</string>
    <string name="button4">举报</string>
    <string name="location1">重新定位</string>
    <string name="location2">定位</string>
    <string name="count">历史劫持次数统计：</string>
    <string name="state">说明：</string>
    <string name="location">当前位置：</string>
    <string name="UI">欢迎！</string>
    <string name="condition">当前手机状态：</string>
    <string name="button33">确定</string>
    <string name="OK">您的手机现在恢复正常！</string>
    <string name="chart">统计图表</string>
    <string name="senticive">敏感词</string>
    <string name="badnamenumber">黑名单</string>
    <string name="haha">*****************************************************</string>
    <string name="serving">扫描中...</string>
    <string name="sms">短信提醒：</string>
    <string name="smswarn">当前收到的短信可疑，请注意！</string>
   

</resources>
