<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backer"
    
     >
    <LinearLayout 
        
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    
    
        >
         <TextView 
        
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="#ff6666"
        android:textStyle="bold" 
        />
         
    </LinearLayout>
   
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#660000"
        android:text="@string/haha" 
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text="@string/state"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="35dp"
        android:drawableRight="@drawable/arrow4"
        android:drawableStart="@drawable/lll"
        android:background="@drawable/button"
        android:textColor="#00ff00"
         />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text="@string/location"
        android:layout_marginLeft="35dp"
        android:drawableRight="@drawable/arrow4"
        android:drawableStart="@drawable/lll"
        android:background="@drawable/button"
        android:textColor="#00ff00"
         />
    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text="@string/condition"
        android:layout_marginLeft="35dp"
        android:drawableRight="@drawable/arrow4"
        android:drawableStart="@drawable/lll"
        android:background="@drawable/button"
        android:textColor="#00ff00"
         />
    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text="@string/button1"
        android:layout_marginLeft="35dp"
        android:drawableRight="@drawable/arrow4"
        android:drawableStart="@drawable/lll"
        android:background="@drawable/button"
        android:textColor="#00ff00"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#660000"
        android:text="@string/haha"  
        />

</LinearLayout>

</LinearLayout>